# subgenix

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE-COMMERCIAL.rst  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
scripts/: make_help.py
src/: __init__.py  main.py
src/subgenix/: audio_extractor.py  audio_transcriber.py  cache_manager.py  cli.py  progress_manager.py  subtitle_generator.py
