[tool.poetry]
name = "subgenix"
version = "0.1.0"
description = "Object oriented Python tool to generate subtitles from video files"
authors = ["JMDOTS <contact@jmdots.com>", "Mark L. Dotson <mdotson888@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
openai-whisper = "^20231117"
torch = "^2.3.1"
click = "^8.1.7"

aiofiles = "^23.2.1"
tqdm = "^4.66.4"
[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^22.3.0"
flake8 = "^4.0.1"
ruff = "^0.0.241"
mypy = "^0.812"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
subgenix = "src.subgenix.cli:main"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
